--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,9 @@
 \documentclass[12pt,twoside]{report}
 \usepackage[utf8]{inputenc}
+
 \usepackage{graphicx}
+\usepackage{rotating}
+\usepackage{tikz}
 \usepackage[a4paper,width=150mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
@@ -47,7 +50,7 @@ I want to thank...
 \chapter{LITERATURE REVIEW.}
 \input{chapters/chapter02}
  
-\chapter{Chapter Three Title}
+\chapter{SIWES ACTIVITIES}
 \input{chapters/chapter03}
  
 \chapter{Chapter Four Title}
