added chapter 4 and pix format(unsusfl)

--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,8 @@
 \usepackage{graphicx}
 \usepackage{rotating}
 \usepackage{tikz}
+
+\usepackage{subfig}
 \usepackage[a4paper,width=150mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 %\usepackage{fancyhdr}
 %\pagestyle{fancy}
@@ -84,7 +86,7 @@ All thanks is given to God for the success gratitude to the CEO of GRIT Engineer
 \chapter{SIWES ACTIVITIES}
 \input{chapters/chapter03}
  
-\chapter{Chapter Four Title}
+\chapter{REFLECTION ON THE INTERNSHIP}
 \input{chapters/chapter04}
  
 \chapter{Conclusion}
