added courses that helped

--- a/main.tex
+++ b/main.tex
@@ -75,7 +75,7 @@ All thanks is given to God for the success gratitude to the CEO of GRIT Engineer
 \tableofcontents
 
 
-
+\listoffigures
 
 \chapter{Introduction}
 \input{chapters/introduction}
@@ -91,9 +91,9 @@ All thanks is given to God for the success gratitude to the CEO of GRIT Engineer
  
 \chapter{Conclusion}
 \input{chapters/conclusion}
-
-\appendix
-\chapter{Appendix Title}
-\input{chapters/appendix}
+%
+%\appendix
+%\chapter{Appendix Title}
+%\input{chapters/appendix}
 
 \end{document}
