added references and straightened picture allignments

--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,10 @@
 \documentclass[12pt,twoside]{report}
 \usepackage[utf8]{inputenc}
-
+\usepackage{pdfpages}
 \usepackage{graphicx}
 \usepackage{rotating}
 \usepackage{tikz}
+\usepackage{tocbibind}
 
 \usepackage{subfig}
 \usepackage[a4paper,width=150mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
@@ -65,8 +66,7 @@ school and to look forward to the courses I would be taking in subsequent semest
 \chapter*{Dedication}
 To mum and dad
 
-\chapter*{Declaration}
-I declare that..
+\includepdf[pages=-]{letter_of_trans.pdf}
  
 \chapter*{Acknowledgements}
 All thanks is given to God for the success gratitude to the CEO of GRIT Engineering Limited, Mr Ifedayo Oladapo, Mr. Pipeoluwa Samuel of the Microelectronic research group and everyone who in one way or the other contibuted to making this a successful spell of learning and worthwhile experiences.
@@ -95,5 +95,8 @@ All thanks is given to God for the success gratitude to the CEO of GRIT Engineer
 %\appendix
 %\chapter{Appendix Title}
 %\input{chapters/appendix}
+%\addcontentsline{toc}{chapter}{Bibliography}
+\bibliographystyle{plain} % use style plain.bst
+\bibliography{refs}
 
 \end{document}
