--- a/refs.bib
+++ b/refs.bib
@@ -1,4 +1,4 @@
-@article{Hefferon04,
+@article{heff,
 	author = "Jim Hefferon",
 	title= "{CTAN} for {S}tarters",
 	year= "2004",
@@ -7,6 +7,7 @@
 	number = "2",
 	pages= "126--127"
 }
+
 
 @article{einstein,
     author =       "Albert Einstein",
@@ -20,6 +21,17 @@
     DOI =          "http://dx.doi.org/10.1002/andp.19053221004"
 }
 
+@article{fram,
+    author =       "Elliot Philofsky",
+    title =        "FRAM, The Ultimate Memory.",
+    journal =      "Proceedings of Nonvolatile Memory Technology Conference",
+    volume =       "322",
+    number =       "10",
+    pages =        "91-98",
+    year =         "1996",
+    DOI =          "http://fram/10.1002/andp.19053221004"
+}
+
 @book{latexcompanion,
     author    = "Michel Goossens and Frank Mittelbach and Alexander Samarin",
     title     = "The \LaTeX\ Companion",
@@ -28,24 +40,17 @@
     address   = "Reading, Massachusetts"
 }
 
+
 @book{eagle,
-    author    = "Scarpino Mic",
+    author    = "Scarpino Matthew",
     title     = "Designing Circuit Boards with EAGLE",
     year      = "2014",
     publisher = "Edward Brothers Malloy",
     address   = "Michigan"
 }
 
-@book{lorabk,
-    author    = "Teemp Meliodas",
-    title     = "Lora, The best of both worlds",
-    year      = "2017",
-    publisher = "Elsivier",
-    address   = "London"
-}
-
 @book{embedded,
-    author    = "Heath Sss",
+    author    = "Heath Steve",
     title     = "Embedded Systems Design",
     year      = "2003",
     publisher = "Butterwoth-Heinemann",
@@ -54,12 +59,14 @@
 
 @misc{tpu,
     author    = "Colin Riley",
-    title     = "Designing a Processor in {VHDL}.",
+    title     = "Designing a Processor in VHDL.",
+    year = {2004},
     url       = "http://labs.domipheus.com/blog/designing-a-cpu-in-vhdl-part-1-rationale-tools-method"
 }
 
 @misc{knuthwebsite,
     author    = "Donald Knuth",
     title     = "Knuth: Computers and Typesetting",
-    url       = "http://www-cs-faculty.stanford.edu/\~{}uno/abcde.html"
+    url       = "http://www-cs-faculty.stanford.edu/\~{}uno/abcde.html",                                                                                                                                                                                                               
+    year      = "2014"
 }
